Fix line break issue, title spacing

--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ nav li a:hover {
 
   h1 {
     text-align: left;
+    white-space: nowrap;
   }
 
   nav {
